--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "biome:check": "biome check"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
