--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,25 @@
 {
     "headers": [
       {
+        "source": "/fonts/:path*",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      },
+      {
         "source": "/img/:path*",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      },
+      {
+        "source": "/favicon.ico",
         "headers": [
           {
             "key": "Cache-Control",
