--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
+    "lucide-react": "^0.482.0",
     "motion": "^11.15.0",
     "next": "15.1.1",
     "react": "^19.0.0",
