--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.482.0",
     "motion": "^11.15.0",
     "next": "15.1.1",
