--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "motion": "^11.15.0",
     "next": "15.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
