--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@shadcn/ui": "^0.0.4",
     "@studio-freight/lenis": "^1.0.42",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/functions": "^3.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
+    "mongodb": "^6.20.0",
     "motion": "^11.15.0",
     "next": "15.1.1",
     "react": "^19.0.0",
