--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome check --write",
-    "biome:check": "biome check"
+    "biome:check": "biome check",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "@studio-freight/lenis": "^1.0.42",
@@ -21,6 +23,7 @@
     "mongodb": "^6.20.0",
     "motion": "^11.15.0",
     "next": "15.1.1",
+    "prisma": "^6.17.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
