--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "shadcn": "^3.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
