chore: aplica formatação do biome em todos os arquivos do src

--- a/biome.json
+++ b/biome.json
@@ -26,6 +26,7 @@
     }
   },
   "files": {
-    "ignore": ["node_modules", "dist", ".next", "prisma/generated/"]
+    "ignore": ["node_modules", "dist", ".next", "prisma/generated/"],
+    "include": ["src/**/*"]
   }
 }
