--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "biome:check": "biome check",
     "prisma:studio": "prisma studio",
     "prisma:generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -52,6 +53,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "husky": "^9.1.7",
     "postcss": "^8",
     "shadcn": "^3.4.0",
     "tailwindcss": "^3.4.1",
